wrtie api for get another user profile
