# Consultant/urls.py
@@ -24,6 +24,7 @@ urlpatterns = [
     path('user/', include('User.user_urls')),
     path('consultant/', include('User.consultant_urls')),
     path('profile/', views.UserProfileAPI.as_view(), name="user profile"),
+    path('profile/<str:username>/', views.AnotherUserProfileAPI.as_view(), name="another user profile"),
     path('request/', include('request.urls')),
     path('channel/', include('channel.urls')),
     path('channel-message/<int:channelId>/', include('message.urls')),
