# static/swagger.json
@@ -460,6 +460,65 @@
         }
       }
     },
+    "/profile/{username}/": {
+      "get": {
+        "tags": [
+          "Profile"
+        ],
+        "summary": "get another user profile",
+        "operationId": "getAnotherUserProfile",
+        "security": [
+          {
+            "Token": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "username",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "username": {
+                  "type": "string"
+                },
+                "firstName": {
+                  "type": "string"
+                },
+                "lastName": {
+                  "type": "string"
+                },
+                "avatar": {
+                  "type": "string"
+                },
+                "certificate": {
+                  "type": "string"
+                },
+                "user_type": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
     "/consultant/login/": {
       "post": {
         "tags": [
@@ -529,13 +588,13 @@
         "produces": [
           "application/json"
         ],
-         "parameters": [
+        "parameters": [
           {
             "in": "path",
             "name": "channelId",
             "required": true,
             "type": "integer"
-          },
+          }
         ],
         "responses": {
           "200": {
@@ -550,23 +609,22 @@
                   "type": "string"
                 },
                 "description": {
-                  "type" : "string"
+                  "type": "string"
                 },
-                "invite_link":{
-                  "type":"string"
+                "invite_link": {
+                  "type": "string"
                 },
-                "consultant":{
+                "consultant": {
                   "type": "object",
-                   "properties": {
-                      "username": {
-                        "type": "string"
-                      },
-                      "phone_number": {
-                        "type": "string"
-                      }
+                  "properties": {
+                    "username": {
+                      "type": "string"
+                    },
+                    "phone_number": {
+                      "type": "string"
+                    }
                   }
                 }
-                
               }
             }
           },
@@ -577,7 +635,6 @@
       }
     },
     "/channel/": {
-      
       "post": {
         "tags": [
           "Channel"
@@ -664,7 +721,7 @@
         }
       }
     },
-     "/update-channel-inf/{channelId}/":{
+    "/update-channel-inf/{channelId}/": {
       "put": {
         "tags": [
           "Channel"
@@ -688,7 +745,7 @@
             "name": "channelId",
             "required": true,
             "type": "integer"
-          },
+          }
         ],
         "responses": {
           "200": {
@@ -698,7 +755,7 @@
               "properties": {
                 "status": {
                   "type": "string"
-                },
+                }
               }
             }
           },
@@ -762,7 +819,6 @@
         }
       }
     },
-   
     "/channel-message/{channelId}/{messageId}/": {
       "put": {
         "tags": [
@@ -1262,9 +1318,7 @@
                       "invite_link": {
                         "type": "string"
                       }
-                    },
-                    
-                    
+                    }
                   }
                 }
               }
